# vim:set noet ts=4:
#
# ibus - The Input Bus
#
# Copyright (c) 2007-2008 Huang Peng <shawn.p.huang@gmail.com>
#
# This library is free software; you can redistribute it and/or
# modify it under the terms of the GNU Lesser General Public
# License as published by the Free Software Foundation; either
# version 2 of the License, or (at your option) any later version.
#
# This library is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public
# License along with this program; if not, write to the
# Free Software Foundation, Inc., 59 Temple Place, Suite 330,
# Boston, MA  02111-1307  USA

# ibus-m17n.png is the parrot.png from: https://www.nongnu.org/m17n/parrot.png
# resized to 128x128 with:
#
#    convert ibus-m17n.png -resize 128x128\! ibus-m17n-new.png

SUBDIRS = \
	$(NULL)

icons_DATA = \
	ibus-m17n.png \
	$(NULL)

iconsdir = $(pkgdatadir)/icons

hicolor_icon_16_DATA = 16x16/ibus-m17n.png
hicolor_icon_16dir = $(datadir)/icons/hicolor/16x16/apps

hicolor_icon_22_DATA = 22x22/ibus-m17n.png
hicolor_icon_22dir = $(datadir)/icons/hicolor/22x22/apps

hicolor_icon_24_DATA = 22x22/ibus-m17n.png
hicolor_icon_24dir = $(datadir)/icons/hicolor/24x24/apps

hicolor_icon_32_DATA = 32x32/ibus-m17n.png
hicolor_icon_32dir = $(datadir)/icons/hicolor/32x32/apps

hicolor_icon_48_DATA = 48x48/ibus-m17n.png
hicolor_icon_48dir = $(datadir)/icons/hicolor/48x48/apps

hicolor_icon_64_DATA = 64x64/ibus-m17n.png
hicolor_icon_64dir = $(datadir)/icons/hicolor/64x64/apps

hicolor_icon_128_DATA = 128x128/ibus-m17n.png
hicolor_icon_128dir = $(datadir)/icons/hicolor/128x128/apps

hicolor_icon_256_DATA = 256x256/ibus-m17n.png
hicolor_icon_256dir = $(datadir)/icons/hicolor/256x256/apps

EXTRA_DIST = \
	$(icons_DATA) \
	$(hicolor_icon_16_DATA) \
	$(hicolor_icon_22_DATA) \
	$(hicolor_icon_24_DATA) \
	$(hicolor_icon_32_DATA) \
	$(hicolor_icon_48_DATA) \
	$(hicolor_icon_64_DATA) \
	$(hicolor_icon_128_DATA) \
	$(hicolor_icon_256_DATA) \
	$(NULL)

MAINTAINERCLEANFILES = \
	Makefile.in \
	$(NULL)
